logic for 5x5 connect 5 @ 8 blocks

--- a/index.html
+++ b/index.html
@@ -6,24 +6,44 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <h1 id="gameTitle">8-position Tic-Tac-Toe</h1>
+        <h1 id="gameTitle">Tic-Tac-Toe..?</h1>
         <div id="announcer"></div>
         <div id="gameBoard">
             <table>
                 <tr>
-                    <td id="box6"> </td>
-                    <td id="box7"> </td>
-                    <td id="box8"> </td>
+                    <td onclick="handleBoardClick()" id="0"> </td>
+                    <td onclick="handleBoardClick()" id="1"> </td>
+                    <td onclick="handleBoardClick()" id="2"> </td>
+                    <td onclick="handleBoardClick()" id="3"> </td>
+                    <td onclick="handleBoardClick()" id="4"> </td>
                 </tr>
                 <tr>
-                    <td id="box3"> </td>
-                    <td id="box4"> </td>
-                    <td id="box5"> </td>
+                    <td onclick="handleBoardClick()" id="5"> </td>
+                    <td onclick="handleBoardClick()" id="6"> </td>
+                    <td onclick="handleBoardClick()" id="7"> </td>
+                    <td onclick="handleBoardClick()" id="8"> </td>
+                    <td onclick="handleBoardClick()" id="9"> </td>
                 </tr>
                 <tr>
-                    <td id="box0"> </td>
-                    <td id="box1"> </td>
-                    <td id="box2"> </td>
+                    <td onclick="handleBoardClick()" id="10"> </td>
+                    <td onclick="handleBoardClick()" id="11"> </td>
+                    <td onclick="handleBoardClick()" id="12"> </td>
+                    <td onclick="handleBoardClick()" id="13"> </td>
+                    <td onclick="handleBoardClick()" id="14"> </td>
+                </tr>
+                <tr>
+                    <td onclick="handleBoardClick()" id="15"> </td>
+                    <td onclick="handleBoardClick()" id="16"> </td>
+                    <td onclick="handleBoardClick()" id="17"> </td>
+                    <td onclick="handleBoardClick()" id="18"> </td>
+                    <td onclick="handleBoardClick()" id="19"> </td>
+                </tr>
+                <tr>
+                    <td onclick="handleBoardClick()" id="20"> </td>
+                    <td onclick="handleBoardClick()" id="21"> </td>
+                    <td onclick="handleBoardClick()" id="22"> </td>
+                    <td onclick="handleBoardClick()" id="23"> </td>
+                    <td onclick="handleBoardClick()" id="24"> </td>
                 </tr>
             </table>
         </div>
